--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "antd": "^4.16.5",
     "axios": "^0.21.1",
     "dayjs": "^1.10.5",
-    "node-sass": "^5.0.1",
+    "husky": "^6.0.0",
+    "node-sass": "5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-in-viewport": "^1.0.0-alpha.17",
@@ -24,6 +25,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "lint": "eslint .",
+    "lint::fix": "eslint --fix .",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -44,5 +47,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^7.29.0",
+    "eslint-plugin-react": "^7.24.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint"
+    }
   }
 }
