refactor: integrate backend api

--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-REACT_APP_API_URL=https://dummyapi.io/data/api
-
-REACT_APP_API_ID=60d9f58a82f22ec25274c765
+REACT_APP_API_URL=http://localhost:3002/api/v1
+REACT_APP_USER_ID=constant-user-id
